--- a/pong-test/index.html
+++ b/pong-test/index.html
@@ -1,11 +1,196 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<style>
+canvas {
+	border: 1px solid #d3d3d3;
+	background-color: #000000;
+}
+</style>
+</head>
+<body onload="startGame()">
+<script>
 
-<body>
+class Ball {
+	constructor(x, y, radius) {
+		this.x = x;
+		this.y = y;
+		this.radius = radius;
+		this.speed = 5;
 
-	<canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
-	</canvas>
+		this.changeAngle(0);
+		this.movement = 0;
+
+	}
+	changeAngle(angle) {
+		if(angle == 0)
+			angle = 1; // angle cannot be equal to 0;
+		this.angle = angle;
+		this.radians = this.angle / (180 * Math.PI) * 10;
+		this.xunits = Math.cos(this.radians) * this.speed;
+		this.yunits = Math.sin(this.radians) * this.speed;
+	}
+	angleTo(x, y) {
+		this.changeAngle(Math.atan2(y - this.y, x - this.x));
+	}
+	render() {
+		this.x += this.xunits;
+		this.y += this.yunits;
+		ctx.save();
+		ctx.beginPath();
+		ctx.fillStyle = "white";
+		this.movement += this.speed;
+		ctx.arc(this.x, this.y, this.radius, 0, 2 * Math.PI);
+		ctx.save();
+		ctx.shadowColor = '#999';
+		ctx.shadowBlur = 20;
+		ctx.shadowOffsetX = 15;
+		ctx.shadowOffsetY = 15;
+		ctx.strokeStyle = "purple";
+		ctx.fill();
+		ctx.stroke();
+		ctx.restore();
+		ctx.restore();
+		if(this.xunits > 0)
+			opponent.moveTo(this.ghostPath(opponent.x));
+
+	}
+	ghostPath(toX) {
+		let {x, y} = this;
+		while(x < toX) {
+			x += this.xunits;
+			y += this.yunits;
+		}
+		return {x, y};
+	}
+}
+
+var playerOne;
+var playerTwo;
+
+function startGame() {
+	myGameArea.start();
+	playerOne = new drawPlayerOne(5, myGameArea.canvas.height / 3, "white", 20, 120);
+	playerTwo = new drawPlayerTwo(5, myGameArea.canvas.height / 3, "white", myGameArea.canvas.width - 25, 120);
+}
+
+var myGameArea =
+{
+	canvas : document.createElement("canvas"),
+	start : function()
+	{
+		this.canvas.width = 480;
+		this.canvas.height = 270;
+		this.context = this.canvas.getContext("2d");
+		document.body.insertBefore(this.canvas, document.body.childNodes[0]);
+		this.interval = setInterval(updateGameArea, 20);
+		window.addEventListener('keydown', function (e) {
+			myGameArea.key = e.keyCode;
+		})
+		window.addEventListener('keyup', function (e) {
+			myGameArea.key = false;
+		})
+	},
+	clear : function() {
+		this.context.clearRect(0, 0, this.canvas.width, this.canvas.height);
+	}
+}
+
+function drawPlayerOne(width, height, color, x, y)
+{
+	var canvas = document.getElementById("canvas");
+	this.gamearea = myGameArea;
+	this.width = width;
+	this.height = height;
+	this.x = x;
+	this.y = y;
+	this.speedY = 0;
+	this.update = function() {
+		ctx = myGameArea.context;
+		ctx.fillStyle = color;
+		ctx.fillRect(this.x, this.y, this.width, this.height);
+	}
+	this.newPos = function() {
+		this.y += this.speedY;
+	}
+}
+
+function drawPlayerTwo(width, height, color, x, y)
+{
+	var canvas = document.getElementById("canvas");
+	this.gamearea = myGameArea;
+	this.width = width;
+	this.height = height;
+	this.x = x;
+	this.y = y;
+	this.speedY = 0;
+	this.update = function() {
+		ctx = myGameArea.context;
+		ctx.fillStyle = color;
+		ctx.fillRect(this.x, this.y, this.width, this.height);
+	}
+	this.newPos = function() {
+		this.y += this.speedY;
+	}
+}
+
+function updateGameArea() {
+	myGameArea.clear();
+	playerOne.speedY = 0;
+	playerTwo.speedY = 0;
+	/*if (playerOne.key && playerOne.key == 38)
+	{
+		playerOne.speedY = -1;
+	}
+	if (playerOne.key && playerOne.key == 40)
+	{
+		playerOne.speedY = 1;
+	}*/
+	if (myGameArea.key && myGameArea.key == 38)//up
+	{
+		if (playerTwo.y != 0)
+			playerTwo.speedY = -3;
+	}
+	if (myGameArea.key && myGameArea.key == 40) //down
+	{
+		if (playerTwo.y + playerTwo.height < myGameArea.canvas.height)
+			playerTwo.speedY = 3;
+	}
+	playerOne.newPos();
+	playerOne.update();
+	playerTwo.newPos();
+	playerTwo.update();
+	draw_center_line(myGameArea.context, myGameArea.canvas);
+}
+
+function draw_center_line(ctx, canvas) {
+	let currentX = canvas.width / 2, currentY = 0;
+	ctx.moveTo(currentX, currentY);
+	let buffer = 2;
+	let numberOfDashes = 30;
+	let bufferSize = numberOfDashes * buffer;
+	let heightOfDash = canvas.height / numberOfDashes;
+	for (let i = 0; i < numberOfDashes; i++) {
+		currentY += heightOfDash;
+		ctx.lineTo(currentX, currentY);
+		ctx.strokeStyle = "white";
+		ctx.stroke();
+		ctx.beginPath();
+		currentY += buffer;
+		ctx.moveTo(currentX, currentY);
+	}
+}
+
+/*function draw_scores(ctx) {
+	ctx.fillStyle = "white";
+	ctx.fillText("Player 1: " + player_points, 20, 30);
+	ctx.fillText("Player 2: " + opponent_points, canvas.width - 100, 30);
+}*/
+
+</script>
+
+<p>try to make a pong</p>
 
 </body>
-
 </html>
