--- a/pong-test/index.html
+++ b/pong-test/index.html
@@ -71,15 +71,16 @@ var playerTwo;
 var playerOne_points = 0;
 var playerTwo_points = 0;
 
-function startGame() {
+function startGame() //set up everything
+{
 	myGameArea.start();
-	playerOne = new drawPlayerOne(5, myGameArea.canvas.height / 3, "green", 20, 120);
-	playerTwo = new drawPlayerTwo(5, myGameArea.canvas.height / 3, "red", myGameArea.canvas.width - 25, 120);
+	playerOne = new drawPlayerOne(5, myGameArea.canvas.height / 3, "green", 20, myGameArea.canvas.height / 3);
+	playerTwo = new drawPlayerTwo(5, myGameArea.canvas.height / 3, "red", myGameArea.canvas.width - 25, myGameArea.canvas.height / 3);
 	init_ball(myGameArea.context, myGameArea.canvas);
 }
 
 var myGameArea =
-{
+{ //Start the canvas
 	canvas : document.createElement("canvas"),
 	start : function()
 	{
@@ -89,10 +90,11 @@ var myGameArea =
 		document.body.insertBefore(this.canvas, document.body.childNodes[0]);
 		this.interval = setInterval(updateGameArea, 20);
 		window.addEventListener('keydown', function (e) {
-			myGameArea.key = e.keyCode;
+			myGameArea.keys = (myGameArea.keys || []);
+			myGameArea.keys[e.keyCode] = (e.type == "keydown");
 		})
 		window.addEventListener('keyup', function (e) {
-			myGameArea.key = false;
+			myGameArea.keys[e.keyCode] = (e.type == "keydown");
 		})
 	},
 	clear : function() {
@@ -100,7 +102,66 @@ var myGameArea =
 	}
 }
 
-function check_for_collisions(canvas) {
+function init_ball(ctx, canvas) //create first ball
+{
+	ctx.beginPath();
+	let ball_x = canvas.width / 2;
+	let ball_y = canvas.height / 2;
+	let ball_radius = 5;
+	ctx.arc(ball_x, ball_y, ball_radius, 0, 2 * Math.PI);
+	ball = new Ball(ball_x, ball_y, ball_radius);
+	ctx.fillStyle = "white";
+	ctx.save();
+	ctx.shadowColor = '#999';
+	ctx.shadowBlur = 20;
+	ctx.shadowOffsetX = 15;
+	ctx.shadowOffsetY = 15;
+	ctx.strokeStyle = "purple";
+	ctx.fill();
+	ctx.stroke();
+	ctx.restore();
+}
+
+function drawPlayerOne(width, height, color, x, y) //set up first playerOne
+{
+	var canvas = document.getElementById("canvas");
+	this.gamearea = myGameArea;
+	this.width = width;
+	this.height = height;
+	this.x = x;
+	this.y = y;
+	this.speedY = 0;
+	this.update = function() {
+		ctx = myGameArea.context;
+		ctx.fillStyle = color;
+		ctx.fillRect(this.x, this.y, this.width, this.height);
+	}
+	this.newPos = function() {
+		this.y += this.speedY;
+	}
+}
+
+function drawPlayerTwo(width, height, color, x, y) //set up first playerTwo
+{
+	var canvas = document.getElementById("canvas");
+	this.gamearea = myGameArea;
+	this.width = width;
+	this.height = height;
+	this.x = x;
+	this.y = y;
+	this.speedY = 0;
+	this.update = function() {
+		ctx = myGameArea.context;
+		ctx.fillStyle = color;
+		ctx.fillRect(this.x, this.y, this.width, this.height);
+	}
+	this.newPos = function() {
+		this.y += this.speedY;
+	}
+}
+
+function check_for_collisions(canvas) //if ball hit either player or goal
+{
 	// if ball is at goal
 	if (ball.x > canvas.width || ball.x < 0)
 	{
@@ -130,7 +191,8 @@ function check_for_collisions(canvas) {
 		ball.changeAngle( Math.floor(Math.random() * (185 - 175) + 175) - ball.angle);
 	}
 
-	function addPoint(p1ORp2) {
+	function addPoint(p1ORp2)
+	{
 		switch(p1ORp2)
 		{
 			case 1:
@@ -143,85 +205,30 @@ function check_for_collisions(canvas) {
 		ball.changeAngle(180 - ball.angle);
 		ball.x = canvas.width / 2;
 		ball.y = canvas.height / 2;
-
 	}
 }
 
-function init_ball(ctx, canvas) {
-	ctx.beginPath();
-	let ball_x = canvas.width / 2;
-	let ball_y = canvas.height / 2;
-	let ball_radius = 5;
-	ctx.arc(ball_x, ball_y, ball_radius, 0, 2 * Math.PI);
-	ball = new Ball(ball_x, ball_y, ball_radius);
-	ctx.fillStyle = "white";
-	ctx.save();
-	ctx.shadowColor = '#999';
-	ctx.shadowBlur = 20;
-	ctx.shadowOffsetX = 15;
-	ctx.shadowOffsetY = 15;
-	ctx.strokeStyle = "purple";
-	ctx.fill();
-	ctx.stroke();
-	ctx.restore();
-}
-
-function drawPlayerOne(width, height, color, x, y)
+function updateGameArea()
 {
-	var canvas = document.getElementById("canvas");
-	this.gamearea = myGameArea;
-	this.width = width;
-	this.height = height;
-	this.x = x;
-	this.y = y;
-	this.speedY = 0;
-	this.update = function() {
-		ctx = myGameArea.context;
-		ctx.fillStyle = color;
-		ctx.fillRect(this.x, this.y, this.width, this.height);
-	}
-	this.newPos = function() {
-		this.y += this.speedY;
-	}
-}
-
-function drawPlayerTwo(width, height, color, x, y)
-{
-	var canvas = document.getElementById("canvas");
-	this.gamearea = myGameArea;
-	this.width = width;
-	this.height = height;
-	this.x = x;
-	this.y = y;
-	this.speedY = 0;
-	this.update = function() {
-		ctx = myGameArea.context;
-		ctx.fillStyle = color;
-		ctx.fillRect(this.x, this.y, this.width, this.height);
-	}
-	this.newPos = function() {
-		this.y += this.speedY;
-	}
-}
-
-function updateGameArea() {
 	myGameArea.clear();
 	playerOne.speedY = 0;
 	playerTwo.speedY = 0;
-	/*if (playerOne.key && playerOne.key == 38)
+	if (myGameArea.keys && myGameArea.keys[87])
 	{
-		playerOne.speedY = -1;
+		if (playerOne.y >= 0)
+			playerOne.speedY = -3;
 	}
-	if (playerOne.key && playerOne.key == 40)
+	if (myGameArea.keys && myGameArea.keys[83])
 	{
-		playerOne.speedY = 1;
-	}*/
-	if (myGameArea.key && myGameArea.key == 38)//up
+		if (playerOne.y + playerOne.height < myGameArea.canvas.height)
+			playerOne.speedY = 3;
+	}
+	if (myGameArea.keys && myGameArea.keys[38])//up
 	{
-		if (playerTwo.y != 0)
+		if (playerTwo.y >= 0)
 			playerTwo.speedY = -3;
 	}
-	if (myGameArea.key && myGameArea.key == 40) //down
+	if (myGameArea.keys && myGameArea.keys[40]) //down
 	{
 		if (playerTwo.y + playerTwo.height < myGameArea.canvas.height)
 			playerTwo.speedY = 3;
@@ -236,7 +243,8 @@ function updateGameArea() {
 	draw_scores(myGameArea.context, myGameArea.canvas);
 }
 
-function draw_center_line(ctx, canvas) {
+function draw_center_line(ctx, canvas)
+{
 	let currentX = canvas.width / 2, currentY = 0;
 	ctx.moveTo(currentX, currentY);
 	let buffer = 2;
@@ -254,31 +262,11 @@ function draw_center_line(ctx, canvas) {
 	}
 }
 
-function draw_scores(ctx, canvas) {
+function draw_scores(ctx, canvas)
+{
 	ctx.fillStyle = "white";
 	ctx.fillText("Player 1: " + playerOne_points, 20, 30);
 	ctx.fillText("Player 2: " + playerTwo_points, canvas.width - 100, 30);
-}
-
-function adjust_for_dpi(canvas_ele) {
-  canvas_ele.style.width = "100%";
-  canvas_ele.style.height = "100%";
-
-  let canvas_gcs = getComputedStyle(canvas_ele);
-  let canvas_css_width = canvas_gcs.getPropertyValue('width')
-    .slice(0, -2);
-  let canvas_css_height = canvas_gcs.getPropertyValue('height')
-    .slice(0, -2);
-
-  let dpi = window.devicePixelRatio;
-
-  let setAttr = canvas_ele.setAttribute.bind(canvas_ele);
-  setAttr('width', canvas_css_width * dpi);
-  setAttr('height', canvas_css_height * dpi);
-
-  let setCss = canvas_ele.style;
-  setCss.width = canvas_css_width;
-  setCss.height = canvas_css_height;
 }
 
 </script>
