--- a/pong-test/index.html
+++ b/pong-test/index.html
@@ -6,7 +6,7 @@
 canvas {
 	border: 1px solid #d3d3d3;
 	background-color: #000000;
-	width: 50%;
+	width: 80%;
 }
 
 .center {
@@ -29,14 +29,15 @@ canvas {
 
 <script>
 
-const canvas_width = 1000;
+const canvas_width = 1200;
 const canvas_height = 800;
 const paddle_width = 5;
-const paddle_height = canvas_height / 4;
+const paddle_height = 150;
 const paddle_x = 20;
 const paddle2_x = canvas_width - 25;
-const paddle_y = canvas_height / 3;
+const paddle_y = canvas_height / 2 - (paddle_height / 2);
 const ball_speed = 12;
+const paddle_speed = 10;
 const score_size = canvas_width / 10;
 const score1_x = canvas_width / 3;
 const score2_x = canvas_width / 3 + canvas_width / 3;
@@ -54,22 +55,16 @@ class Ball {
 
 	}
 	changeAngle(angle) {
-		if(angle == 0)
-			angle = 1; // angle cannot be equal to 0;
-		this.angle = angle;
-		this.radians = this.angle / (180 * Math.PI) * 10;
-		this.xunits = Math.cos(this.radians) * this.speed;
-		this.yunits = Math.sin(this.radians) * this.speed;
+		// if(angle == 0)
+		// 	angle = 1; // angle cannot be equal to 0;
+		//this.angle = angle;
+		this.angle = angle % 360;
+
 	}
 	angleTo(x, y) {
 		this.changeAngle(Math.atan2(y - this.y, x - this.x));
 	}
 	render() {
-		if (!pause)
-		{
-			this.x += this.xunits;
-			this.y += this.yunits;
-		}
 		ctx.save();
 		ctx.beginPath();
 		ctx.fillStyle = "white";
@@ -235,24 +230,83 @@ function check_for_collisions(canvas) //if ball hit either player or goal
 		if (ball.y <= 0 + ball.radius)
 			ball.y = ball.radius + 1;
 	}
+	if (!pause)
+	{
+		let xdest, ydest;
+		ball.radians = ball.angle / (180 * Math.PI) * 10;
+		ball.xunits = Math.cos(ball.radians) * ball.speed;
+		ball.yunits = Math.sin(ball.radians) * ball.speed;
+		/*let x1 = playerOne.x;
+		let x2 = (playerOne.x + playerOne.width);
+		let x3 = ball.x;
+		let x4 = xdest;
+		let y1 = playerOne.y;
+		let y2 = (playerOne.y + playerOne.height);
+		let y3 = ball.y;
+		let y4 = ydest;*/
+		xdest = ball.x + ball.xunits;
+		ydest = ball.y + ball.yunits;
 
+		if (ball.x < canvas_width / 2)
+		{
+			if (!calculate_impact(playerOne.x + playerOne.width, (playerOne.x + playerOne.width), ball.x, xdest,
+		playerOne.y, (playerOne.y + playerOne.height), ball.y, ydest))
+			{
+				ball.x = xdest;
+				ball.y = ydest;
+			}
+		}
+		else
+		{
+			if (!calculate_impact(playerTwo.x, playerTwo.x, ball.x, xdest,
+		playerTwo.y, (playerTwo.y + playerTwo.height), ball.y, ydest))
+			{
+				ball.x = xdest;
+				ball.y = ydest;
+			}
+		}
+
+
+	}
 	//if playerOne paddle collision
-	if (ball.x - ball.radius < playerOne.x + playerOne.width && ball.x + ball.radius > playerOne.x + playerOne.width &&
+	/*if (ball.x - ball.radius < playerOne.x + playerOne.width && ball.x + ball.radius > playerOne.x + playerOne.width &&
 			ball.y - ball.radius > playerOne.y && ball.y + ball.radius < playerOne.y + playerOne.height && ball.xunits < 0)
 	{
 		ball.changeAngle( Math.floor(Math.random() * (175 - 180) + 175) - ball.angle);
-		if (ball.speed < ball_speed * 2)
-			ball.speed+=1;
+		ball.speed = min(ball.speed + 1, ball_speed * 2);
 	}
 	//if playerTwo paddle collision
 	if (ball.x + ball.radius > playerTwo.x - playerTwo.width && ball.x - ball.radius < playerTwo.x + playerTwo.width &&
 			ball.y - ball.radius >= playerTwo.y && ball.y + ball.radius <= playerTwo.y + playerTwo.height && ball.xunits > 0)
 	{
 		ball.changeAngle( Math.floor(Math.random() * (185 - 175) + 175) - ball.angle);
-		if (ball.speed < ball_speed * 2)
-			ball.speed+=1;
+		ball.speed = min(ball.speed + 1, ball_speed * 2);
+	}*/
+	function map(x, in_min, in_max, out_min, out_max)
+	{
+		return (x - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
 	}
 
+	function calculate_impact(x1, x2, x3, x4, y1, y2, y3, y4)
+	{
+		const den = (x1 - x2) * (y3 - y4) - (y1 - y2) * (x3 - x4);
+		if (den == 0)
+			return;
+		const t = ((x1 - x3) * (y3 - y4) - (y1 - y3) * (x3 - x4)) / den;
+		const u = -((x1 - x2) * (y1 - y3) - (y1 - y2) * (x1 - x3)) / den;
+		if (t > 0 && t < 1 && u > 0 && u < 1)
+		{
+			if (ball.x < canvas_width / 2)
+				ball.changeAngle((map(t, 0,1 ,-45, 45 )));
+			else
+			{
+				ball.changeAngle((map(t, 0,1 ,225, 135 )));
+			}
+			ball.speed = Math.min(ball.speed + 0.5, ball_speed * 2);
+			return (true);
+		}
+		return false;
+	}
 	function addPoint(p1ORp2) //add point and reset position
 	{
 		switch(p1ORp2)
@@ -264,10 +318,10 @@ function check_for_collisions(canvas) //if ball hit either player or goal
 				playerTwo_points += 1;
 				break;
 		}
-		ball.x = canvas.width / 2;
-		ball.y = canvas.height / 2;
-		playerOne.y = canvas.height / 3;
-		playerTwo.y = canvas.height / 3;
+		ball.x = canvas_width / 2;
+		ball.y = canvas_height / 2;
+		playerOne.y = paddle_y;
+		playerTwo.y = paddle_y;
 		ball.speed = ball_speed;
 		ball.movement = ball_speed;
 		ball.changeAngle(180 - ball.angle);
@@ -279,25 +333,25 @@ function updateGameArea() // do the 50 fps games
 	if (!pause)
 	{
 		myGameArea.clear();
-		document.getElementById("res").innerHTML = ball.speed; //just to test value
+		//document.getElementById("res").innerHTML = ball.angle; //just to test value
 		//ball.changeAngle(ball.angle);
 		playerOne.speedY = 0;
 		playerTwo.speedY = 0;
 		if (myGameArea.keys && myGameArea.keys[87])
 			if (playerOne.y >= 0)
-				playerOne.speedY = -(myGameArea.canvas.height / 100 + 2);
+				playerOne.speedY = -(paddle_speed);
 
 		if (myGameArea.keys && myGameArea.keys[83])
 			if (playerOne.y + playerOne.height < myGameArea.canvas.height)
-				playerOne.speedY = myGameArea.canvas.height / 100 + 2;
+				playerOne.speedY = paddle_speed;
 
 		if (myGameArea.keys && myGameArea.keys[38])//up
 			if (playerTwo.y >= 0)
-				playerTwo.speedY = -(myGameArea.canvas.height / 100 + 2);
+				playerTwo.speedY = -(paddle_speed);
 
 		if (myGameArea.keys && myGameArea.keys[40]) //down
 			if (playerTwo.y + playerTwo.height < myGameArea.canvas.height)
-				playerTwo.speedY = myGameArea.canvas.height / 100 + 2;
+				playerTwo.speedY = paddle_speed;
 		playerOne.update();
 		playerTwo.update();
 		draw_center_line(myGameArea.context, myGameArea.canvas);
@@ -361,7 +415,13 @@ function restart() //when button restart pressed
 {
 	document.getElementById('btn_pause').style.visibility = 'visible';
 	pause = false;
-	init_ball(myGameArea.context, myGameArea.canvas);
+	ball.x = canvas_width / 2;
+	ball.y = canvas_height / 2;
+	playerOne.y = paddle_y;
+	playerTwo.y = paddle_y;
+	ball.speed = ball_speed;
+	ball.movement = ball_speed;
+	ball.angle = 0;
 	playerOne_points = 0;
 	playerTwo_points = 0;
 }
